--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/yandex-maps": "^2.1.36",
+    "@yandex/ymaps3-default-ui-theme": "^0.0.19",
     "autoprefixer": "^10.4.21",
     "classnames": "^2.5.1",
     "next": "16.0.0",
     "postcss": "^8.5.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "yandex-maps": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@yandex/ymaps3-types": "^0.0.27",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
