--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.120.0",
+    "numpy>=2.3.4",
+    "openrouteservice>=2.3.3",
+    "pytz>=2025.2",
     "requests>=2.32.5",
     "uvicorn>=0.38.0",
 ]
