--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.120.0",
+    "joblib>=1.5.2",
     "numpy>=2.3.4",
     "openrouteservice>=2.3.3",
     "pytz>=2025.2",
     "requests>=2.32.5",
+    "torch>=2.9.0",
     "uvicorn>=0.38.0",
 ]
